applicationDeployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olumide-deployment
  namespace: candidate-c
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        injector.nsm.nginx.com/auto-inject: "enabled"
    spec:
      containers:
        - name: webserver
          image: lumszy/turotest:v40
          imagePullPolicy: Always
          resources:
            requests:
              memory: "8Mi"
              cpu: "2m"
            limits:
              memory: "32Mi"
              cpu: "32m"
          ports:
            - containerPort: 80
              name: "http"
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/config.html
              subPath: config.html
              # - name: html
              #   mountPath: /tmp/share/nginx/templates/
              #   subPath: site1.template
      volumes:
        - name: "html"
          configMap:
            name: olumide-configmap
      # - name: index
      #   configMap:
      #     name: indexHTML-configmap
