applicationDeployment/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: olumide-svc
  namespace: candidate-c
  labels:
    app: nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: olumide-ext.test-subaccount-1-v02.test-subaccount-1.rr.mu   
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  - port: 443
    name: https
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
